--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "next-images": "1.2.0",
     "debounce": "1.2.0",
     "rxjs": "6.5.3",
-    "react-cubeview": "2.6.23"
+    "three": "0.108.0"
   },
   "devDependencies": {
-    "eslint": "^6.4.0",
-    "eslint-plugin-react": "^7.14.3",
-    "babel-eslint": "10.0.3"
+    "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
+    "babel-eslint": "10.0.3",
+    "eslint": "6.4.0",
+    "eslint-plugin-react": "7.14.3",
+    "@typescript-eslint/eslint-plugin": "2.3.0",
+    "@typescript-eslint/parser": "2.3.0",
+    "typescript": "3.6.3"
   }
 }
