--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next-images": "1.2.0",
     "debounce": "1.2.0",
     "rxjs": "6.5.3",
-    "three": "0.108.0"
+    "three": "0.108.0",
+    "next-offline": "4.0.5"
   },
   "devDependencies": {
     "@types/node": "12.7.5",
