Finish API Prototype

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next-offline": "4.0.5",
     "react-sidebar": "3.0.2",
     "firebase": "6.6.2",
-    "react-firebaseui": "4.0.0"
+    "react-firebaseui": "4.0.0",
+    "rxfire": "3.8.2"
   },
   "devDependencies": {
     "@types/node": "12.7.5",
