--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "9.0.6",
     "@zeit/next-workers": "1.0.1-canary.1",
     "@zeit/next-css": "1.0.1",
+    "@babel/plugin-proposal-decorators": "7.6.0",
     "worker-loader": "2.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
