--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@zeit/next-css": "1.0.1",
     "@zeit/next-workers": "1.0.1-canary.1",
     "debounce": "1.2.0",
+    "dotenv-webpack": "^1.7.0",
     "file-saver": "^2.0.2",
     "firebase": "6.6.2",
     "mobx": "5.13.0",
