fix node version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "floor-plan-editor",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
