--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "floor-plan-editor",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,35 +13,35 @@
     "lint:fix": "tslint --fix --project ."
   },
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "7.6.0",
+    "@babel/plugin-proposal-decorators": "7.8.0",
     "@types/file-saver": "^2.0.1",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-workers": "1.0.1-canary.1",
     "debounce": "1.2.0",
-    "dotenv-webpack": "^1.7.0",
-    "file-saver": "^2.0.2",
-    "firebase": "6.6.2",
-    "mobx": "5.13.0",
-    "mobx-react": "6.1.3",
-    "next": "9.0.6",
-    "next-images": "1.2.0",
-    "next-offline": "4.0.5",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
+    "dotenv-webpack": "1.7.0",
+    "file-saver": "2.0.2",
+    "firebase": "7.6.2",
+    "mobx": "5.15.2",
+    "mobx-react": "6.1.5",
+    "next": "9.1.7",
+    "next-images": "1.3.0",
+    "next-offline": "4.0.6",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-firebaseui": "4.0.0",
-    "react-google-login": "^5.0.7",
+    "react-google-login": "5.0.7",
     "react-ioc": "1.0.0",
     "react-sidebar": "3.0.2",
-    "three": "0.108.0",
+    "three": "0.112.1",
     "worker-loader": "2.0.0"
   },
   "devDependencies": {
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.1",
+    "@types/node": "13.1.6",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
     "@types/debounce": "1.2.0",
     "@types/react-sidebar": "3.0.0",
-    "tslint": "5.20.0",
-    "typescript": "3.6.3"
+    "tslint": "5.20.1",
+    "typescript": "3.7.4"
   }
 }
